[project]
name = "launcher"
version = "0.0.0"
description = "Python front-end for the Yb experiment control system (parallel to matlab_new/)"
requires-python = ">=3.8"
# numpy is needed from Phase 1 (the serializer); Phase 0 uses the stdlib only.
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7", "numpy>=1.20"]

[tool.pytest.ini_options]
# Flat-on-path imports mirror the codebase convention (`from exp_seq import ExpSeq`).
# YbSteps/YbSeqs mirror matlab_new/ layout (the step cone + experiment sequences),
# imported flat the same way (`from init_step import init_step`). YbExptCtrl mirrors
# matlab_new/YbExptCtrl/ (the device runtime: dispatch_descriptor, run-loop glue).
pythonpath = ["lib", "YbSteps", "YbSeqs", "YbExptCtrl", "tools", "."]
testpaths = ["tests"]
# Default run is fully safe on the shared lab PC: no engine load, no hardware.
# Run engine checks explicitly with:  pytest -m needs_engine   (compile-only)
# Run the live MATLAB differential with:  pytest -m needs_matlab  (spawns matlab -batch)
# Run hardware checks (downtime only): pytest -m needs_hardware
addopts = "-m 'not needs_hardware and not needs_engine and not needs_matlab'"
markers = [
    "no_hardware: pure byte/structure math; never loads the engine or touches devices (default)",
    "needs_engine: loads the libnacs engine library; compile-only, no init_run/start (run in a safe window)",
    "needs_matlab: spawns a headless 'matlab -batch' to capture live ground truth (engine-free; needs MATLAB on PATH or $MATLAB_EXE)",
    "needs_hardware: drives NI DAQ / Siglent AWG / QICK FPGA / Orca camera (downtime only)",
]
